<resources>
    <string name="action_submit">ثبت</string>

    <string name="error_storage_permission">برای الصاق عکس برنامه نیاز به مجوز خواندن و نوشتن در حافظه دارد.</string>
    <string name="error_voice_recorder_permission">جهت ضبط و ارسال صدا نیاز به مجوز ضبط صدا می باشد.</string>
    <string name="error_contact_permission">برای انتخاب از بین مخاطبین تلفن, برنامه نیاز به مجوز خواندن مخاطبین دارد.</string>
    <string name="error_location_permission">برای راحتتر پیدا کردن مکان فعلی خود بروی نقشه نیاز به مجوز موقعیت یاب می باشد.</string>
    <string name="error_make_gps_on">برای یافتن موقعیت مکانی فعلیتان بروی نقشه, لطفا موقعیت یاب را روشن کنید.</string>
    <string name="error_check_internet_connection">لطفا از اتصال دستگاه خود به اینترنت اطمینان حاصل کنید.</string>

    <string name="error_unknown">خطای نامشخصی رخ داده است.</string>
    <string name="error_invalid_input">مقادیر وارد شده صحیح نیستند.</string>
    <string name="error_server_out_of_reach">مشکلی از سمت سرور پیش آمده است</string>
    <string name="error_no_params">هیچ پارامتری ارسال نشده است.</string>
    <string name="error_invalid_token">دسترسی شما منقضی شده است, لطفا مجددا وارد شوید.</string>
    <string name="action_close">بستن</string>
    <string name="notification_alarm">رخداد جدید</string>
    <string name="default_notification_channel_id">default_notification_channel</string>


    <string name="button_start">شروع</string>
    <string name="intro_one">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</string>
    <string name="intro_two">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</string>
    <string name="intro_three">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است  </string>
    <string name="hint_register">ثبت نام کنید</string>
    <string name="hint_enter">وارد شوید</string>
    <string name="hint_please_enter_verify_code">کد تایید را وارد کنید :</string>
    <string name="hint_change_number">تغییر شماره</string>
    <string name="hint_user_name">نام کاربری :</string>
    <string name="hint_password">رمز عبور :</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_pass_word">رمز عبور</string>
    <string name="hint_password_repeat">تکرار رمز عبور : </string>
    <string name="hint_name">نام : </string>
    <string name="hint_family">نام خانوادگی : </string>
    <string name="hint_gender">جنسیت :</string>
    <string name="hint_age">سن : </string>
    <string name="hint_education">تحصیلات :</string>
    <string name="hint_email">ایمیل :</string>
    <string name="hint_confirm">تایید</string>
    <string name="default_profile_name">علی اصغری</string>
    <string name="hint_edit_profile">ویرایش پروفایل</string>
    <string name="hint_rules">قوانین</string>
    <string name="hint_support">پشتیبانی</string>
    <string name="hint_about_us">درباره ما</string>
    <string name="hint_settings">تنظیمات</string>
    <string name="hint_advice_center_in_city">مراکز مشاوره در شهر %s</string>
    <string name="hint_advice_reserve">رزرو مشاوره</string>
    <string name="hint_temp_address">آدرس : پیروزی، خیابان پلیس، کوچه همت، پلاک 3</string>
    <string name="hint_show_profile">نمایش پروفایل</string>
    <string name="hint_appointment_reserve">رزرو ملاقات</string>
    <string name="hint_appointment_detail">جزئیات ملاقات</string>
    <string name="hint_reserve_appointment_detail">جزئیات ملاقات رزرو شده </string>
    <string name="hint_question_count">تعداد سوالات : </string>
    <string name="hint_without_limit">بدون محدودیت</string>
    <string name="hint_exam_time">زمان آزمون : </string>
    <string name="btn_start_exam">شروع آزمون</string>
    <string name="btn_back_to_home">بازگشت به خانه</string>
    <string name="hint_appointment_register">ثبت ملاقات</string>
    <string name="hint_reserve_appointment_title">برای ثبت ملاقات روز و ساعت را انتخاب نمایید</string>
    <string name="hint_reserve_day">روز :</string>
    <string name="hint_reserve_time">ساعت : </string>
    <string name="hint_time_reserve">رزرو ملاقات</string>
    <string name="hint_selected_hours">ساعت انتخابی :</string>
    <string name="button_forget_password">رمز عبورتان را فراموش کرده ‌اید ؟</string>
    <string name="hint_exit_application">جهت خروج مجددا دکمه بازگشت را بزنید</string>
    <string name="hint_phone_number_enter">91xxxxxxx</string>
    <string name="hint_dash">- - - - -</string>
    <string name="error_you_are_ban">دسترسی شما محدود شده است و امکان استفاده از نرم افزار را ندارید.</string>
    <string name="action_register">ثبتنام</string>
    <string name="hint_location">موقعیت مکانی</string>
    <string name="hint_add_location_desc">برای اطلاع از مرکز مشاورین فعال در شهر خود موقعیت مکانی خود را وارد کنید</string>
    <string name="hint_state">استان :</string>
    <string name="hint_city">شهر :</string>
    <string name="action_logout">خروج</string>
    <string name="hint_new_password">رمز عبور جدید : </string>
    <string name="hint_new_password_repeat">تکرار رمز عبور جدید : </string>
    <string name="hint_enter_your_number">شماره تلفن خود را وارد کنید :</string>
    <string name="hint_rules_des">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. </string>
    <string name="hint_national_code">کد ملی</string>
    <string name="hint_exam_list">آزمون ها</string>
    <string name="hint_exam_info">مشخصات آزمون</string>
    <string name="action_start_exam">شروع آزمون</string>
    <string name="hint_exam">آزمون</string>
    <string name="hint_which_from_how">سوال %s از %s</string>
    <string name="hint_logout_from_account">خروج از حساب</string>
    <string name="hint_archived_consult">آرشیو مشاوره ها</string>
    <string name="hint_pay_history">سابقه پرداخت</string>
    <string name="action_next">بعدی</string>
    <string name="action_exam_done">ثبت و نمایش نتیجه</string>
    <string name="hint_answer">پاسخ</string>
    <string name="action_look_better">ارزیابی دقیقتر</string>
    <string name="hint_exam_result">نتیجه آزمون</string>
    <string name="hint_consult_centers">مراکز مشاوره</string>
    <string name="error_not_answered">ابتدا پاسخ خود را وارد نمایید.</string>
    <string name="error_parse_failure">خطا در پردازش داده ها</string>
    <string name="hint_consult_centers_info">اطلاعات مرکز</string>
    <string name="hint_adviser_info">اطلاعات مشاور</string>
    <string name="hint_get_date_time">انتخاب زمان</string>
    <string name="error_no_time_in_this_date">در تاریخ انتخاب شده تایم خالی وجود ندارد.</string>
    <string name="error_pick_date_first">ابتدا میبایست یک تاریخ انتخاب کنید.</string>
    <string name="hint_consult_history">آرشیو مشاوره ها</string>
    <string name="hint_change_picture">تغییر عکس</string>
    <string name="hint_exams">آزمون ها</string>
    <string name="hint_get_date">انتخاب تاریخ</string>
    <string name="hint_courses">دوره های آموزشی</string>
    <string name="hint_consults">مشاوره های من</string>
    <string name="hint_phone_to_call_s">شماره تماس : %s</string>
    <string name="hint_privacy_policy">قوانین و مقررات</string>
    <string name="action_send_answer">ارسال پاسخ</string>
    <string name="hint_adviser_count_s">"تعداد مشاوران : %s"</string>

</resources>