<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="40dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:srcCompat="@drawable/ic_account_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtName"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/normal_view_height"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            tools:text="@string/default_profile_name"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/whiteGrey"
            app:layout_constraintEnd_toStartOf="@+id/ivAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEditProfile"
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/normal_view_height"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/hint_edit_profile"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtEditProfile">


            <!--Pay History-->
            <LinearLayout
                android:id="@+id/btnPayHistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_view_height"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_button_mirror"
                android:gravity="center|right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:text="@string/hint_pay_history" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/normal_view_height"
                    android:layout_height="@dimen/normal_view_height"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_payment" />
            </LinearLayout>

            <!--archive-->
            <LinearLayout
                android:id="@+id/btnArchives"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_view_height"
                android:background="@drawable/shape_button_mirror"
                android:gravity="center|right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:text="@string/hint_consults" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/normal_view_height"
                    android:layout_height="@dimen/normal_view_height"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_archive" />
            </LinearLayout>

            <!--rules-->
            <LinearLayout
                android:id="@+id/btnRules"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_view_height"
                android:background="@drawable/shape_button_mirror"
                android:gravity="center|right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:text="@string/hint_rules" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/normal_view_height"
                    android:layout_height="@dimen/normal_view_height"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_gavel_white" />
            </LinearLayout>

            <!--support-->
            <LinearLayout
                android:id="@+id/btnSupport"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_view_height"
                android:background="@drawable/shape_button_mirror"
                android:gravity="center|right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:text="@string/hint_support" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/normal_view_height"
                    android:layout_height="@dimen/normal_view_height"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_support_agent" />
            </LinearLayout>


            <!--about us-->
            <LinearLayout
                android:id="@+id/btnAboutUs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_view_height"
                android:background="@drawable/shape_button_mirror"
                android:gravity="center|right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:text="@string/hint_about_us" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/normal_view_height"
                    android:layout_height="@dimen/normal_view_height"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_about_us" />
            </LinearLayout>

            <!--settings-->
            <LinearLayout
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_view_height"
                android:background="@drawable/shape_button_mirror"
                android:gravity="center|right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="10dp"
                    android:text="@string/hint_logout_from_account" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/normal_view_height"
                    android:layout_height="@dimen/normal_view_height"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_exit_to_app" />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>